<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">loris</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="txt_ok"> 确定 </string>
    <string name="txt_cancel"> 取消 </string>
    <string name="txt_levelup"> 恭喜您，升级了 </string>
    <string name="txt_level">等级:</string>
    <string name="txt_score">分数:</string>
    <string name="txt_over"> 游戏结束! </string>
    <string name="txt_onboard">您上英雄榜啦！</string>
    <string name="txt_suretoexit">是否要退出</string>
    <string name="txt_timeformater">yyyy-MM-dd HH:mm</string>
    <string name="txt_nextobj">   下一个图形</string>
    <string name="txt_faq">游戏说明</string>
    <string name="txt_help">这是经典的俄罗斯方块，感谢您的支持！~</string>
    <string name="txt_clear_list">清空积分榜</string>
    <string name="txt_top_list">积分榜</string>
    <string name="txt_exit">退出</string>
    <string name="txt_input_your_name">请输入您的昵称</string>
    <string name="edit_hint">请输入姓名</string>
    <string name="txt_name">姓名:</string>
    <string name="txt_date">时间:</string>
    <string name="txt_start_game">开始游戏</string>
    <string name="txt_score_list">英雄榜</string>
    <string name="txt_developer">开发人员</string>
    <string name="txt_blank"></string>
    <string name="developers"> developers </string>
    <string name="author1"> author1 </string>
    <string name="author2"> author2 </string>
    <string name="author3"> author3 </string>

</resources>