<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/startbackground"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >
    </TextView>

    <Button
        android:id="@+id/start_begin"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="@drawable/background_select"
        android:text="@string/txt_start_game"
        android:textColor="@drawable/color_select"
        android:textSize="30sp" >
    </Button>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/start_hero"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="@drawable/background_select"
        android:text="@string/txt_score_list"
        android:textColor="@drawable/color_select"
        android:textSize="30sp" >
    </Button>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/start_help"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="@drawable/background_select"
        android:text="@string/txt_faq"
        android:textColor="@drawable/color_select"
        android:textSize="30sp" >
    </Button>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/start_author"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="@drawable/background_select"
        android:text="@string/txt_developer"
        android:textColor="@drawable/color_select"
        android:textSize="30sp" >
    </Button>


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/start_quit"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="@drawable/background_select"
        android:text="@string/txt_exit"
        android:textColor="@drawable/color_select"
        android:textSize="30sp" >
    </Button>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >
    </TextView>

</LinearLayout>